fix(site): don't draw tooltips out of screen

--- a/src/site/components/Tooltip/Tooltip.module.css
+++ b/src/site/components/Tooltip/Tooltip.module.css
@@ -8,5 +8,5 @@
   background: var(--color-background);
   /* Compensate cursor size */
   left: 8px;
-  top: 32px;
+  top: 0;
 }
